  to warn callers that deprefixing and automatic assignment of such fields will
  not be done in a future version.
* JobSpecification::getTitle was deprecated without providing a replacement.
  It wasn't used and job given the purpose of JobSpecification class it's
  not needed.
* The protected method File::getImageSize() is deprecated.
* MediaHandler::getImageSize(), ::getMetadata() and ::isMetadataValid were
  deprecated and should no longer be overridden. Instead, subclasses should
  override getSizeAndMetadata().
* Deprecated File::getMetadata(). Instead use ::getMetadataArray(),
  ::getMetadataItem() and ::getMetadataItems().
* Message::title was deprecated, use Message::page instead.
* BaseTemplate::getAfterPortlet, BaseTemplate::renderAfterPortlet and the
  BaseTemplateAfterPortlet hook, which were deprecated in 1.35,
  now emit deprecation warnings.
* LocalFile::getHistory hook is deprecated.
* Calling WikiPage::prepareContentForEdit() without a UserIdentity is now
  deprecated.
* User::getEditTokenObject, ::getEditToken, ::matchEditToken were deprecated.
  Use CsrfTokenRepository, which is available via IContextSource, instead.
  ::matchEditTokenNoSuffix was deprecated without replacement.
  It was introduced to be able to provide custom error message if the token
  was submitted, but ending slashes were stripped by some ASCII mangling proxy.
  Use matchToken instead, such proxies are much less common now and there's
  not much benefit in customising the error message.
* ContentHandler::getForTitle(), deprecated since 1.35, now emits
  deprecation warnings.
* User::listOptionKinds(), deprecated since 1.35, now emits deprecation
  warnings.
* WikiPage::doEditContent(), deprecated since 1.32, now emits deprecation
  warnings.
* CentralIdLookup::factory and ::factoryNonLocal were hard-deprecated,
  obtain an instance from MediaWikiServices instead.
* The class RandomPage was renamed to SpecialRandomPage. The class RandomPage
  is now deprecated.